content: expand homepage and metadata from Cambodia to Southeast Asia
Update all user-facing text to reflect coverage of Vietnam, Thailand,
Cambodia, and the Philippines. No layout or styling changes.

- index.html: hero heading, intro paragraphs, guide section titles/text
- pages.json: page titles and meta descriptions for index, about, blog, how-it-works
- lib/site.ts: siteConfig description and tagline

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -1,27 +1,27 @@
 <section class="hero">
-  <h1>Your Honest Guide to Teaching in Cambodia</h1>
-  <p>Real advice from people who lived there. Visas, TEFL, jobs, money, and daily life explained in plain English. No sign up. Just guides.</p>
+  <h1>Your Honest Guide to Teaching English in Southeast Asia</h1>
+  <p>Real advice from people who lived there. Visas, TEFL, jobs, money, and daily life in Vietnam, Thailand, Cambodia, and the Philippines — explained in plain English. No sign up. Just guides.</p>
   <p><a href="/blog" class="grid-button">Read my Blogs</a></p>
 </section>
 
 <section>
-  <h2>Your Guide to Teaching in Cambodia</h2>
-  <p>If you speak English confidently and want a fresh start, GlobeScraper shows you exactly how to begin. Whether you are from the UK, the US, South Africa, or anywhere else, you will find clear, simple guides based on real experience living and working in Cambodia.</p>
-  <p>You will learn how to choose a TEFL or TESOL course, understand visas, avoid bad schools, and prepare for life in Phnom Penh or Siem Reap. No teaching background needed. Just practical steps that help you move with confidence.</p>
+  <h2>Your Guide to Teaching in Southeast Asia</h2>
+  <p>If you speak English confidently and want a fresh start, GlobeScraper shows you exactly how to begin. Whether you are from the UK, the US, South Africa, or anywhere else, you will find clear, simple guides based on real experience living and working in Vietnam, Thailand, Cambodia, and the Philippines.</p>
+  <p>You will learn how to choose a TEFL or TESOL course, understand visas, avoid bad schools, and prepare for life in cities like Ho Chi Minh City, Bangkok, Phnom Penh, or Manila. No teaching background needed. Just practical steps that help you move with confidence.</p>
   <img src="https://images.unsplash.com/photo-1565668314564-9d1bebb0a1db?auto=format&fit=crop&w=548&h=544" alt="A person wearing a straw hat with the word Cambodia written on the band" loading="lazy" />
-  <p><strong>500+ Readers</strong> · <strong>No Degree needed</strong> · <strong>Built for Cambodia</strong></p>
+  <p><strong>500+ Readers</strong> · <strong>No Degree needed</strong> · <strong>Built for Southeast Asia</strong></p>
   <p><a href="/teach-english-cambodia-no-degree" class="grid-button">Read the Starter Guide</a></p>
 </section>
 
 <section>
   <h2>Our Guides</h2>
-  <p>Everything you need to understand teaching and living in Cambodia. Clear steps, real experience, and no fluff.</p>
+  <p>Everything you need to understand teaching and living in Southeast Asia. Clear steps, real experience, and no fluff.</p>
 
-  <h3>Moving to Cambodia Guide</h3>
-  <p>Find out how visas work, what to expect in Phnom Penh or Siem Reap, how to budget for your first month, and how to avoid common mistakes. Based on lived experience and written for newcomers who want a realistic picture of life in Cambodia.</p>
+  <h3>Moving Abroad Guide</h3>
+  <p>Find out how visas work in Vietnam, Thailand, Cambodia, and the Philippines. Learn what to expect in each country, how to budget for your first month, and how to avoid common mistakes. Based on lived experience and written for newcomers who want a realistic picture.</p>
   <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=440,fit=crop/AVL7BR1MVyTjZll4/globescraper-hp-N5YPJ09My411zDSK.png" alt="Young expat couple relaxing beside a swimming pool in Cambodia" loading="lazy" />
 
   <h3>Teaching Preparation Guide</h3>
-  <p>Learn how to choose a TEFL or TESOL course, what certificates matter, and how to prepare for the job market in Cambodia. No experience or degree required. Just honest information that helps you take your first steps.</p>
+  <p>Learn how to choose a TEFL or TESOL course, what certificates matter, and how to prepare for the job market across Southeast Asia. No experience or degree required. Just honest information that helps you take your first steps.</p>
   <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=436,fit=crop/AVL7BR1MVyTjZll4/globescraper-teacher-kfcraktWAdx87DFz.png" alt="Modern Cambodian classroom with a young English teacher smiling at the camera" loading="lazy" />
 </section>
