fix: swap remote motorbike image for cropped local version (PCX.png)

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -23,7 +23,7 @@
     <li>Travel and lifestyle tips across Cambodia</li>
   </ul>
   <p>My goal is to cut through the confusion and give you clear steps that actually match the reality on the ground.</p>
-  <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=768,h=1664,fit=crop/AVL7BR1MVyTjZll4/me-with-a-rented-pcx-C7VT7p6ddf4curTR.jpg" alt="Jamie Blair beside a motorbike at the Mekong River in Phnom Penh, Cambodia" loading="lazy" />
+  <img src="/PCX.png" alt="Jamie Blair beside a motorbike at the Mekong River in Phnom Penh, Cambodia" loading="lazy" />
 </section>
 
 <section>
