Clean up punctuation and improve readability across site copy

--- a/content/pages/index.html
+++ b/content/pages/index.html
@@ -1,6 +1,6 @@
 <section class="hero">
   <h1>Your Honest Guide to Teaching English in Southeast Asia</h1>
-  <p>Real advice from people who lived there. Visas, TEFL, jobs, money, and daily life in Vietnam, Thailand, Cambodia, and the Philippines — explained in plain English. No sign up. Just guides.</p>
+  <p>Real advice from people who lived there. Visas, TEFL, jobs, money, and daily life in Vietnam, Thailand, Cambodia, and the Philippines, explained in plain English. No sign up. Just guides.</p>
   <p><a href="/blog" class="grid-button">Read my Blogs</a></p>
 </section>
 
