fix: sort blog posts newest-first, add Bridge TEFL link to how-it-works page

--- a/content/pages/how-it-works-to-teach-english.html
+++ b/content/pages/how-it-works-to-teach-english.html
@@ -6,6 +6,7 @@
 <section>
   <h2>Step 1: Get TEFL Certified</h2>
   <p>Complete an accredited TEFL or TESOL course online. Most courses take two to four weeks and can be done at your own pace. This is the qualification schools in Cambodia look for, especially if you don't have a degree.</p>
+  <p>We recommend <a href="https://bridge.edu/tefl?sid=101" target="_blank" rel="noopener noreferrer"><strong>Bridge TEFL</strong></a> — they offer internationally accredited, fully online courses starting from 120 hours. Their <a href="https://bridge.edu/tefl/240-hour-master-teo-bundle?sid=101" target="_blank" rel="noopener noreferrer">240-Hour Master Bundle</a> is especially valuable if you don't have a degree, as it gives you a stronger credential to show employers. <a href="/best-tefl-courses-cambodia-2026">Read our full TEFL course comparison →</a></p>
 
   <h2>Step 2: Prepare Your Documents</h2>
   <p>You'll need a valid passport with at least six months remaining, your TEFL certificate, a CV, and a short cover letter. Some schools also ask for a basic medical check and police clearance.</p>
